--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,17 @@ readme = "README.md"
 repository = "https://github.com/SynapseAnalytics/konan-housing-model"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.11"
 konan-sdk = "^1.2.6"
+pandas = "^1.4.2"
+sklearn = "^0.0"
+xgboost = "^1.6.1"
+PyYAML = "^6.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
 pytest = "^7.1.2"
 python-semantic-release = "^7.28.1"
-PyYAML = "^6.0"
 Sphinx = "^4.5.0"
 sphinx-rtd-theme = "^1.0.0"
 python-dotenv = "^0.20.0"
