--- a/src/serving/.env.example
+++ b/src/serving/.env.example
@@ -4,4 +4,4 @@ export KONAN_API_URL="https://api.konan.ai"
 export KONAN_USERNAME="<konan-username>"
 export KONAN_PASSWORD="<konan-password>"
 
-export KONAN_DEPLOYMENT_UUID='<konan-deployment-uuid>'
+export KONAN_DEPLOYMENT_UUID="<konan-deployment-uuid>"
