--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "konan-housing-model"
-version = "0.3.1"
+version = "0.3.2"
 description = "A Konan-ready ML model, packaged and distributed as a Docker image, to estimate the sale price of house based on the popular Ames Housing Dataset"
 authors = ["Synapse Analytics"]
 readme = "README.md"
@@ -36,7 +36,7 @@ version_pattern = [
     ".konan.example:KONAN_APP_VERSION=v{version}",
 ]
 commit_author = "github-actions <actions@github.com>"
-upload_to_repository = true
+upload_to_repository = false
 upload_to_release = true
 build_command = "pip install poetry && poetry build"
 
