--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -51,5 +51,5 @@ jobs:
       with:
         context: builds/svr
         push: true
-        # tags: konan-housing-model:${{ github.ref_name }}
-        tags: konan-housing-model:test-svr
+        # tags: docker.io/${{ secrets.DOCKERHUB_USERNAME }}/konan-housing-model:${{ github.ref_name }}
+        tags: docker.io/${{ secrets.DOCKERHUB_USERNAME }}/konan-housing-model:test-svr
