chore(actions): clean build process

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,25 +31,30 @@ jobs:
       run: |
         python -m poetry install
     - 
-      name: Prepare build environment
-      run: source build.sh svr
-    # - 
-    #   name: Train and put produce weights
-    #   run: |
-    #     KONAN_MODEL_REGRESSOR_NAME=svr
-    #     KONAN_MODEL_ARTIFACTS_PATH=builds/svr/app/artifacts
-    #     python -m poetry run python src/playground/train.py
-    - 
       name: Login to DockerHub
       uses: docker/login-action@v2
       with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - 
+      name: Prepare svr build
+      run: source build.sh svr
     -
-      name: Build and push
+      name: Push svr tag
       uses: docker/build-push-action@v3
       with:
         context: builds/svr
         push: true
-        # tags: docker.io/${{ secrets.DOCKERHUB_USERNAME }}/konan-housing-model:${{ github.ref_name }}
-        tags: docker.io/${{ secrets.DOCKERHUB_USERNAME }}/konan-housing-model:test-svr
+        tags: docker.io/${{ secrets.DOCKERHUB_USERNAME }}/konan-housing-model:${{ github.ref_name }}-svr
+    - 
+      name: Prepare xgboost build
+      run: source build.sh xgboost
+    -
+      name: Push xgboost tag
+      uses: docker/build-push-action@v3
+      with:
+        context: builds/xgboost
+        push: true
+        tags: |
+          docker.io/${{ secrets.DOCKERHUB_USERNAME }}/konan-housing-model:${{ github.ref_name }}-xgboost
+          docker.io/${{ secrets.DOCKERHUB_USERNAME }}/konan-housing-model:latest
