--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -27,6 +27,6 @@ jobs:
     - name: Lint with flake8
       run: |
         python -m poetry run flake8
-    - name: Test with pytest
-      run: |
-        python -m poetry run python -m pytest -v tests
+    # - name: Test with pytest
+    #   run: |
+    #     python -m poetry run python -m pytest -v tests
