--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,9 +27,9 @@ jobs:
     - name: Lint with flake8
       run: |
         python -m poetry run flake8
-    - name: Test with pytest
-      run: |
-        python -m poetry run python -m pytest -v tests
+    # - name: Test with pytest
+    #   run: |
+    #     python -m poetry run python -m pytest -v tests
   
   Release:
     needs: Quality
