--- a/.konan.example
+++ b/.konan.example
@@ -22,3 +22,4 @@ KONAN_CONTAINER_REGISTRY=docker.io
 # Naming and versioning your application
 KONAN_APP_NAME=konan-housing-model
 KONAN_APP_VERSION=v0.4.0
+KONAN_APP_MODEL=xgboost  # currently accepts xgboost and svr only
