--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,7 +21,7 @@ jobs:
     - 
       name: Configure poetry
       shell: bash
-      run: python -m poetry config virtualenvs.in-project true
+      run: python -m poetry config virtualenvs.in-project false
     - 
       name: View poetry version
       run: poetry --version
